# RFC

./: CMakeLists.txt  README.md
dataset/: test_filter.txt  test_packet.txt
include/: Classifier_building.h  Classifier_lookuping.h  RFC_structure.h  log_creating.h
src/: Classifier_building.cpp  Classifier_lookuping.cpp  log_creating.cpp  main.cpp
